<resources>

    <string name="app_name">Test2 Effective Mobile</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="computers">Computers</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">See more</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>

    <string name="filteroptions">FilterOptions</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>

    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="apple">Apple</string>
    <string name="motorola">Motorola</string>

    <string name="location1">Zihuatanejo, Gro</string>
    <string name="location2">Moscow, Ru</string>

    <string name="all">All</string>
    <string name="range_4.5_5.5_inch">4.5 to 5.5 inches</string>
    <string name="range_0_3_inch">less 3 inches</string>
    <string name="range_3_4.5_inch">3 to 4.5 inches</string>
    <string name="range_5.5_6.5_inch">5.5 to 6.5 inches</string>
    <string name="range_more_6.5_inch">more 6.5 inches</string>

    <string name="range_0_150_dollar">$0-$150</string>
    <string name="range_150_300_dollar">$150-$300</string>
    <string name="range_300_500_dollar">$300-$500</string>
    <string name="range_500_1000_dollar">$500-$1000</string>
    <string name="range_1000_5000_dollar">$1000-$5000</string>
    <string name="range_5000_10000_dollar">$5000-$10000</string>

    <string name="explorer">Explorer</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capability">Select color and capability</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="qr_search">QR search</string>
    <string name="starting_icon">starting icon</string>
    <string name="phone_image">phone image</string>
    <string name="liked">liked</string>
    <string name="category_button_foreground">category button foreground</string>
    <string name="bucket">bucket</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="profile">profile</string>
    <string name="cart">cart</string>
    <string name="dot">dot</string>
    <string name="is_new">is new</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="phone_name">Phone name</string>
    <string name="category">category</string>
    <string name="dollar">$</string>
    <string name="liked_bg">liked bg</string>
    <string name="processor">processor</string>
    <string name="camera">camera</string>
    <string name="ram">RAM</string>
    <string name="memory">memory</string>
    <string name="selected">selected</string>
    <string name="_128gb">128GB</string>
    <string name="_256gb">256GB</string>
</resources>