<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_color"
        android:padding="15dp">

        <TextView
            style="@style/tap_bar_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="7dp"
            android:gravity="center_vertical"
            android:text="@string/explorer"
            app:drawableLeftCompat="@drawable/ic_tap_bar_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_transparent_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/cart"
                android:src="@drawable/ic_tapbar_cart" />

            <TextView
                android:visibility="gone"
                style="@style/product_details_memory_selected"
                android:id="@+id/tvCartItemsCount"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="top|end"
                android:background="@drawable/buttons_primary_background"
                android:gravity="bottom|center_horizontal"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnLiked"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_transparent_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/liked"
                android:src="@drawable/ic_tapbar_like" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_transparent_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_tapbar_profile" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>